--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "serverless": "^2.8.0",
     "serverless-python-requirements": "^5.1.0"
   }
 }
